llm: test LLMissueFixProcessor